Agregada imagen Ascenso sin filtros

--- a/index.html
+++ b/index.html
@@ -211,6 +211,14 @@
       <p>Cada edición es un objeto: tirada limitada, papeles con textura, tintas crudas, intervenciones manuales y procesos DIY que celebran el error hermoso.</p>
       <p><strong>KADAVER MACABRE es comunidad:</strong> una trinchera creativa para voces nuevas y miradas intensas.</p>
     </section>
+    <!-- Imagen: Ascenso -->
+<section style="text-align:center; margin: 3rem auto;">
+  <img src="ascenso.jpg" alt="Ascenso hacia lo desconocido"
+       style="width:90%; max-width:700px; border: 2px solid var(--tinta); box-shadow: var(--sombra);">
+  <p style="margin-top: 1rem; font-style: italic; color: var(--tinta-deslavada);">
+    “Cada escalón es un símbolo, cada sombra un secreto.”
+  </p>
+</section>
 
     <section id="convocatoria">
       <h2>Convocatoria Abierta</h2>
