Galería vertical con ritual.jpg y sombra.jpg

--- a/index.html
+++ b/index.html
@@ -272,6 +272,29 @@
 
       <p>🕯️ Se consigue en ferias, librerías amigas y por pedido directo.</p>
     </section>
+    <!-- Galería Vertical -->
+<section style="max-width: 700px; margin: 3rem auto; text-align:center;">
+  <h2 style="font-family:'Creepster',cursive; color:var(--tinta); margin-bottom:2rem;">Galería Oscura</h2>
+
+  <!-- Foto 1: ritual.jpg -->
+  <figure style="margin-bottom:3rem;">
+    <img src="ritual.jpg" alt="Ritual nocturno"
+         style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
+    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">
+      “Lo oculto se manifiesta en la penumbra.”
+    </figcaption>
+  </figure>
+
+  <!-- Foto 2: sombra.jpg -->
+  <figure style="margin-bottom:3rem;">
+    <img src="sombra.jpg" alt="Sombra ancestral"
+         style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
+    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">
+      “Lo que se ve no es lo que siempre está.”
+    </figcaption>
+  </figure>
+
+</section>
   </main>
 
   <footer>
