Galería ampliada: 7 fotos nuevas

--- a/index.html
+++ b/index.html
@@ -234,6 +234,77 @@
         <li>Ilustración • Collage • Fotografía • Poesía • Relato • Cómic • Arte sonoro (QR) • Experimentos híbridos</li>
       </ul>
     </section>
+    </section>
+    <!-- Galería Vertical -->
+<section style="max-width: 700px; margin: 3rem auto; text-align:center;">
+  <h2 style="font-family:'Creepster',cursive; color:var(--tinta); margin-bottom:2rem;">Galería Oscura</h2>
+
+  <!-- Foto 1: ritual.jpg -->
+  <figure style="margin-bottom:3rem;">
+    <img src="ritual.jpg" alt="Ritual nocturno"
+         style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
+    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">
+      “Lo oculto se manifiesta en la penumbra.”
+    </figcaption>
+  </figure>
+
+  <!-- Foto 2: sombra.jpg -->
+  <figure style="margin-bottom:3rem;">
+    <img src="sombra.jpg" alt="Sombra ancestral"
+         style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
+    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">
+      “Lo que se ve no es lo que siempre está.”
+    </figcaption>
+  </figure>
+
+</section>
+<!-- Galería Vertical Ampliada -->
+<section style="max-width: 700px; margin: 3rem auto; text-align:center;">
+  <h2 style="font-family:'Creepster',cursive; color:var(--tinta); margin-bottom:2rem;">Galería Oscura</h2>
+
+  <!-- foto3 -->
+  <figure style="margin-bottom:3rem;">
+    <img src="foto3.jpg" alt="Visión Umbral" style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
+    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">“El umbral entre carne y símbolo.”</figcaption>
+  </figure>
+
+  <!-- foto4 -->
+  <figure style="margin-bottom:3rem;">
+    <img src="foto4.jpg" alt="Rito de sangre" style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
+    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">“Lo sagrado se torna oscuro.”</figcaption>
+  </figure>
+
+  <!-- foto5 -->
+  <figure style="margin-bottom:3rem;">
+    <img src="foto5.jpg" alt="Eco nocturno" style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
+    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">“El eco late más que suena.”</figcaption>
+  </figure>
+
+  <!-- foto6 -->
+  <figure style="margin-bottom:3rem;">
+    <img src="foto6.jpg" alt="Símbolo encontrado" style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
+    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">“Lo que se ve no es lo que siempre está.”</figcaption>
+  </figure>
+
+  <!-- foto7 -->
+  <figure style="margin-bottom:3rem;">
+    <img src="foto7.jpg" alt="Carne y piedra" style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
+    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">“Carne que se hace piedra, piedra que sangra.”</figcaption>
+  </figure>
+
+  <!-- foto8 -->
+  <figure style="margin-bottom:3rem;">
+    <img src="foto8.jpg" alt="Sueño roto" style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
+    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">“El sueño se rompe, la sombra permanece.”</figcaption>
+  </figure>
+
+  <!-- foto9 -->
+  <figure style="margin-bottom:3rem;">
+    <img src="foto9.jpg" alt="Final ascendente" style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
+    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">“Ascender es también hundirse.”</figcaption>
+  </figure>
+
+</section>
 
     <section id="contacto">
       <h2>Contacto</h2>
@@ -271,30 +342,6 @@
       </p>
 
       <p>🕯️ Se consigue en ferias, librerías amigas y por pedido directo.</p>
-    </section>
-    <!-- Galería Vertical -->
-<section style="max-width: 700px; margin: 3rem auto; text-align:center;">
-  <h2 style="font-family:'Creepster',cursive; color:var(--tinta); margin-bottom:2rem;">Galería Oscura</h2>
-
-  <!-- Foto 1: ritual.jpg -->
-  <figure style="margin-bottom:3rem;">
-    <img src="ritual.jpg" alt="Ritual nocturno"
-         style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
-    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">
-      “Lo oculto se manifiesta en la penumbra.”
-    </figcaption>
-  </figure>
-
-  <!-- Foto 2: sombra.jpg -->
-  <figure style="margin-bottom:3rem;">
-    <img src="sombra.jpg" alt="Sombra ancestral"
-         style="width:100%; border:2px solid var(--tinta); box-shadow:var(--sombra);">
-    <figcaption style="margin-top:1rem; font-style:italic; color:var(--tinta-deslavada);">
-      “Lo que se ve no es lo que siempre está.”
-    </figcaption>
-  </figure>
-
-</section>
   </main>
 
   <footer>
